force-app/main/default/objects/Account_Budget_Detail__c/Account_Budget_Detail__c.object-meta.xml
<CustomObject>
    <label>Account Budget Detail</label>
    <nameField>
        <label>Account Budget Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Budget Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>