force-app/main/default/objects/Account_Budget_Detail__c/fields/Budget_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount_2__c</fullName>
    <label>Budget Amount 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>