force-app/main/default/objects/Account_Budget_Detail__c/fields/Column_11__c.field-meta.xml
<CustomField>
    <fullName>Column_11__c</fullName>
    <label>Column 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>