force-app/main/default/objects/Account_Budget_Detail__c/fields/Column_12__c.field-meta.xml
<CustomField>
    <fullName>Column_12__c</fullName>
    <label>Column 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>