force-app/main/default/objects/Account_Budget_Detail__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Budget Used</label>
    <summarizedField>Account_Expense_Detail__c.Expense_Amount__c</summarizedField>
    <summaryForeignKey>Account_Expense_Detail__c.Account_Budget_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>