force-app/main/default/objects/Account_Budget_Detail__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>254</length>
    <type>Text</type>
</CustomField>